force-app/main/default/objects/AVO_permit__c/AVO_permit__c.object-meta.xml
<CustomObject>
    <label>permit</label>
    <nameField>
        <label>permit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Permits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>