force-app/main/default/objects/AVO_permit__c/fields/AVO_Name__c.field-meta.xml
<CustomField>
    <fullName>AVO_Name__c</fullName>
    <label>Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>