force-app/main/default/objects/AVO_permit__c/fields/permit_date__c.field-meta.xml
<CustomField>
    <fullName>permit_date__c</fullName>
    <label>permit date</label>
    <type>Date</type>
</CustomField>