force-app/main/default/objects/AVO_permit__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>ETL</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Devops Engineer</fullName>
            </value>
            <value>
                <fullName>Cloud Engineer</fullName>
            </value>
            <value>
                <fullName>Legendry JavaScript</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>