force-app/main/default/objects/AVO_permit__c/fields/User_bonus__c.field-meta.xml
<CustomField>
    <fullName>User_bonus__c</fullName>
    <formula>user_salary__c *0.1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User bonus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>