force-app/main/default/objects/AVO_permit__c/fields/user_email__c.field-meta.xml
<CustomField>
    <fullName>user_email__c</fullName>
    <label>user email</label>
    <type>Email</type>
</CustomField>