force-app/main/default/objects/AVO_permit__c/fields/user_salary__c.field-meta.xml
<CustomField>
    <fullName>user_salary__c</fullName>
    <label>user salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>