force-app/main/default/objects/AVO_permit__c/fields/user_status__c.field-meta.xml
<CustomField>
    <fullName>user_status__c</fullName>
    <label>user status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Status</valueSetName>
    </valueSet>
</CustomField>