force-app/main/default/objects/AVO_permit__c/listViews/AVO_first_queue_AVO_permit.listView-meta.xml
<ListView>
    <fullName>AVO_first_queue_AVO_permit</fullName>
    <filterScope>Queue</filterScope>
    <label>first queue</label>
    <queue>AVO_first_queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>